minor index tweaks

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <header class="wrap">
         <h1>DART SystmOne Helper</h1>
         <p class="sub">Copy-and-paste bank organised by SystmOne sections.</p>
+        <p class="notice">Reference tool only. Always edit templates before saving. Do not paste identifiers you do not need.</p>
+
     </header>
 
     <main class="wrap">
@@ -39,7 +41,8 @@
             <div class="grid">
                 <div class="card">
                     <h2>Staff notes</h2>
-                    <p id="workerNotes" class="muted">Select an item…</p>
+                    <pre id="workerNotes" class="muted pre">Select an item…</pre>
+
                 </div>
 
                 <div class="card">
