minor index tweaks again...

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
             <div class="grid">
                 <div class="card">
-                    <h2>Staff notes</h2>
+                    <h2>Staff Notes</h2>
                     <pre id="workerNotes" class="muted pre">Select an item…</pre>
 
                 </div>
 
                 <div class="card">
-                    <h2>SystmOne wording</h2>
+                    <h2>SystmOne Wording</h2>
                     <textarea id="textOutput" rows="12" spellcheck="false"></textarea>
                     <div class="actions">
                         <button id="copyBtn">Copy</button>
